syntax = 'proto3';

package m3uetcpb;

option go_package = './m3uetcpb';

import 'api/m3uetcpb/common.proto';
import 'api/m3uetcpb/track.proto';

service PlaybackSvc {
    rpc Get(Empty) returns (GetResponse);
    rpc ExecuteAction(ExecuteActionRequest) returns (Empty);
}

message Playback {
	int64 id = 1;
    string location = 2;
	bool played = 3;
	int64 skip   = 4;
    int64 track_id = 5;
	int64 created_at = 101;
	int64 updated_at = 102;
}

message GetResponse {
    oneof playing {
        Empty empty = 1;
        Playback playback = 2;
        Track track = 3;
    }
}

message ExecuteActionRequest {
    PlaybackAction action = 1;
    bool force = 2;
    int64 seek = 3;
    Perspective perspective = 4;
    repeated int64 ids = 5;
    repeated string locations = 6;
}

enum PlaybackAction {
    NONE = 0;
    PLAY = 1;
    NEXT = 2;
    PREVIOUS = 3;
    SEEK = 4;
    PAUSE = 5;
    STOP = 6;
}
