syntax = 'proto3';

package m3uetcpb;

option go_package = './m3uetcpb';

import 'google/protobuf/empty.proto';

service RootSvc {
    rpc Status(google.protobuf.Empty) returns (StatusResponse);
    rpc Off(OffRequest) returns (OffResponse);
}

message StatusResponse {
    bool alive = 1;
}

message OffRequest {
    bool force = 1;
}

message OffResponse {
    bool going_off = 1;
    string reason = 2;
}
